@@ -1,2 +1,46 @@
+# README
 # Java-Jewel-Chase-game
-As part of my University's 2nd year project, I and a group were tasked with creating a digital version of the 1997 Jewel Chase game which was part of the Microsoft Entertainment Pack: The Puzzle Collection.
+# Software Engineering - Assignment A2
+Overview
+This project is part of a Software Engineering course and involves the development of a Java-based application with a graphical user interface (GUI) using JavaFX. The application, named Jewel Chase, is designed following a set of functional specifications and implements core gameplay features.
+
+Prerequisites
+Java SDK 17+: The project requires Java 17 or higher.
+JavaFX SDK: Ensure that JavaFX is properly set up for GUI components.
+Installation Instructions
+Clone or Download the Repository:
+git clone https://github.com/your-username/Java-Jewel-Chase-game.git
+Set Up Java and JavaFX
+
+Ensure that Java and JavaFX are installed on your system.
+Open the Project
+
+Open the project in your preferred IDE (e.g., IntelliJ IDEA, Eclipse).
+Configure JavaFX
+
+Add JavaFX as a library to your project and configure it as per your IDE’s setup instructions.
+Compiling the Application
+To compile the project from the command line, navigate to the source/ directory and use the following command:
+
+javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml *.java
+
+
+Running the Application
+To run the application, use the following command:
+
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml Main
+
+Alternatively, you can run the project directly from your IDE. Ensure that JavaFX is configured correctly in the run configuration.
+
+Features Implemented
+The following features are implemented in Version 1.0:
+
+Core gameplay features as per the project's functional specification.
+Exception handling for invalid inputs and edge cases.
+Note: Some advanced or forbidden features as per course instructions are not implemented in this version.
+
+Contribution Breakdown
+This project was developed as part of a team effort. Each member contributed to various parts of the project. Contribution details can be found in the GroupGN-MemberContributions.pdf file.
+
+License
+This project is licensed under the MIT License.
